<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="accept">Accept</string>
    <string name="activate_recording">Activate recording</string>
    <string name="add">Add</string>
    <string name="add_connection">Add connection</string>
    <string name="add_name">Name for this entry</string>
    <string name="add_recording">Add new recording</string>
    <string name="add_recording_directory">Save directory of the recording</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_title">The title of the recording</string>
    <string name="airing">Airing</string>
    <string name="all_channels">All channels</string>
    <string name="any">Any</string>
    <string name="app_name">TVHClient</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="authentication_in_progress">Authentication in progress</string>
    <string name="available">Available</string>
    <string name="bad_username_or_password">Wrong username or password</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_add_recording">Cancel adding a new recording? All values will be lost.</string>
    <string name="cancel_edit_recording">Cancel editing existing recording? All values will be lost.</string>
    <string name="cancel_recording">Do you really want to remove the scheduled recording \'%s\'?</string>
    <string name="cast">Cast</string>
    <string name="cast_error_no_media_client_available">Could not get the remote media client from the cast session.</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="clear">Clear</string>
    <string name="clear_database_contents">Clear database contents?</string>
    <string name="clear_icon_cache">Clear channel icon cache?</string>
    <string name="clear_icon_cache_done">Channel icon cache cleared</string>
    <string name="clear_icon_cache_sum">Are you sure you want to remove all channel icons? You need to reconnect to the server to load the updated icons.</string>
    <string name="clear_search_history">Clear search history?</string>
    <string name="clear_search_history_done">Search history cleared</string>
    <string name="clear_search_history_sum">Are you sure you want to remove all entries from the search history?</string>
    <string name="comment">Comment</string>
    <string name="completed_recordings">Completed recordings</string>
    <string name="confirm_discard_connection">Discard connection values? All changes will be lost.</string>
    <string name="confirm_remove_all">Are you sure you want to remove all recordings?</string>
    <string name="connect">Connect</string>
    <string name="connect_to_new_server">Connect to new server?</string>
    <string name="connected_to_server">Connected to server</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="connection">Connection</string>
    <string name="connection_changed">Connection settings have changed. The application will be restarted and a new initial sync will be performed.</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_failed">Connection failed</string>
    <string name="contact_developer">Please contact the developer</string>
    <string name="contact_information">Please contact me if you require support.\nEmail: rsiebert80@gmail.com\nDiscord: https://discord.gg/RbBXfG3</string>
    <string name="content_type">Content type</string>
    <string name="current_time">Current time</string>
    <string name="currently_recording">Currently recording</string>
    <string name="data_errors">Data errors: %1$s</string>
    <string name="data_size">File size: %1$d %2$s</string>
    <string name="days_of_week">Days of week</string>
    <string name="delete">Delete</string>
    <string name="delete_connection">Do you really want to remove the connection \'%s\'?</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="directory">Directory</string>
    <string name="disable">Disable</string>
    <string name="disc_space">Disc space</string>
    <string name="disc_space_low">Disk space is running low, \'%d\' GB remaining</string>
    <string name="discard">Discard</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_from_server">Disconnect from server?</string>
    <string name="download">Download</string>
    <string name="download_error_authentication_required">Error downloading the recording \'%s\'. Authentication not correct or missing.</string>
    <string name="download_error_insufficient_space">Error downloading the recording \'%s\'. Not sufficient space on the device.</string>
    <string name="duplicate_detection">Detect duplicate shows</string>
    <string name="duplicate_recording">Recording is a duplicate</string>
    <string name="duration">Duration</string>
    <string name="duration_sum">Duration in minutes (0 = any)</string>
    <string name="dvr_config">Recording profile</string>
    <string name="edit">Edit</string>
    <string name="edit_connection">Edit connection</string>
    <string name="edit_recording">Edit recording</string>
    <string name="enable">Enable</string>
    <string name="enable_time_window">Activate times for recording</string>
    <string name="enter_channel_name">Enter channel name</string>
    <string name="episode">Episode</string>
    <string name="error_adding_recording">Recording was not added! %s</string>
    <string name="error_empty_title">The title must no be empty!</string>
    <string name="error_loading_program_details">Could not load program details</string>
    <string name="error_loading_recording_details">Could not load recording details</string>
    <string name="error_no_channel_selected">Please select a channel. You server version does not support recording on all channels.</string>
    <string name="error_removing_recording">Recording was not removed! %s</string>
    <string name="error_start_time_past_stop_time">The start time must not be past the stop time.</string>
    <string name="error_starting_playback_no_profile">Error starting playback. No playback profile is selected in the settings.</string>
    <string name="error_updating_recording">Recording was not updated! %s</string>
    <string name="extra_start_time">Extra start minutes (pre-time)</string>
    <string name="extra_stop_time">Extra stop minutes (post-time)</string>
    <string name="failed_connecting_to_server">Could not connect to server. Is the IP address, hostname and port correct? Is a firewall not blocking the port?</string>
    <string name="failed_during_connection_attempt">Error during connection attempt to server</string>
    <string name="failed_opening_socket">Failed to open socket to the server</string>
    <string name="failed_recordings">Failed recordings</string>
    <string name="failed_to_resolve_address">Failed to resolve server address</string>
    <string name="feature_not_available_in_free_version">This feature is not available in the free version!</string>
    <string name="feature_not_supported_by_server">Your TVHeadend server does not support this feature. Please upgrade to newer version.</string>
    <string name="filter_channel_list">Filter channel list</string>
    <string name="friday">Friday</string>
    <string name="full_changelog">Full Changelog</string>
    <string name="genre_color_info">Explain genre colors</string>
    <string name="genre_color_list">List of genre colors and their meaning.</string>
    <string name="help_and_support">Help and Support</string>
    <string name="hint_not_set">Not set</string>
    <string name="in_2_days">In 2 days</string>
    <string name="initializing">Initializing</string>
    <string name="intro_overlay_text">Touch to cast Live TV or recordings to your TV.  Please check that you meet the requirements described in the casting settings.</string>
    <string name="is_series_recording">This recording is part of a series recording</string>
    <string name="is_timer_recording">This recording was created by a timer</string>
    <string name="loading_data">Loading data from server</string>
    <string name="loading_data_done">Loading data from server finished</string>
    <string name="loading_more_programs_finished">Finished loading more programs</string>
    <string name="max_duration">Maximum duration of the program</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="min_duration">Minimum duration of the program</string>
    <string name="minus" translatable="false">-</string>
    <string name="minutes">%d min</string>
    <string name="minutes_unit">min</string>
    <string name="monday">Monday</string>
    <string name="multiple_channel_tags">Multiple channel tags</string>
    <string name="name">Name</string>
    <string name="no_active_connection">No active connection is defined. The existing connection to the server will be closed.</string>
    <string name="no_cast_session">No cast session available</string>
    <string name="no_connection_active_advice">At least one connection is defined, but not activated. Select the connection from the list and tap the star symbol in the toolbar.</string>
    <string name="no_connection_available">No connection available. Please add a new connection to connect to the server.</string>
    <string name="no_data">No program data available</string>
    <string name="no_media_player">No media player found</string>
    <string name="no_playback_profile_selected">Please select a profile in the playback settings first. A profile is required to start playing channels.</string>
    <string name="not_connected_to_server">Not connected to server</string>
    <string name="nothing">Nothing</string>
    <string name="part">Part</string>
    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="player_is_loading_more_data">Please wait, player is loading more data…</string>
    <string name="pref_advanced_settings">Advanced settings</string>
    <string name="pref_cast_profiles">Cast playback profiles</string>
    <string name="pref_cast_profiles_sum">Select a profile that shall be used to cast a channel or recorded program to a chromecast or similar device.</string>
    <string name="pref_casting">Casting</string>
    <string name="pref_casting_sum">Configure casting of programs or recordings to your TV. The server must have transcoding enabled.</string>
    <string name="pref_force_aspect_ratio_for_sd_content_enabled">Aspect ratio is 16:9 for SD content</string>
    <string name="pref_changelog">Changelog</string>
    <string name="pref_changelog_sum">Show a list of features and changes of the different application versions.</string>
    <string name="pref_clear_database">Clear database</string>
    <string name="pref_program_guide">Program guide</string>
    <string name="recording_disabled">This recording is disabled</string>
    <string name="remove">Remove</string>
    <string name="removed_recordings">Removed recordings</string>
    <string name="scheduled_recordings">Scheduled recordings</string>
    <string name="select_connection">Select connection</string>
    <string name="series_recordings">Series recordings</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="stop">Stop</string>
    <string name="stream_errors">Stream errors: %1$s</string>
    <string name="subtitle">Subtitle</string>
    <string name="summary">Summary</string>
    <string name="timer_recordings">Timer recordings</string>
    <string name="title">Title</string>
</resources>