<?xml version="1.0" encoding="utf-8"?>
<org.tvheadend.tvhclient.ui.common.ListItemContainerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListItemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/genre"
        android:layout_width="4dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_content_top" />

    <TextView
        android:id="@+id/icon_text"
        style="@style/ContentFont"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_content_top" />

    <ImageView
        android:id="@+id/state"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_content_top" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/guideline_content_start"
        app:layout_constraintEnd_toStartOf="@id/state"
        app:layout_constraintTop_toTopOf="@id/guideline_content_top"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/SubtitleFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/subtitle" />

    <TextView
        android:id="@+id/episode"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        tools:text="@string/episode" />

    <TextView
        android:id="@+id/summary"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode"
        tools:text="@string/summary" />

    <TextView
        android:id="@+id/channel"
        style="@style/ContentFont"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/summary"
        tools:text="@string/channel" />

    <TextView
        android:id="@+id/duration"
        style="@style/ContentFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/channel"
        tools:text="@tools:sample/date/hhmm" />

    <TextView
        android:id="@+id/date"
        style="@style/ContentFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/channel"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/start_stop"
        style="@style/ContentFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        tools:text="@tools:sample/date/hhmm" />

    <TextView
        android:id="@+id/description"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_stop"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/is_series_recording"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/is_series_recording"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/is_timer_recording"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/is_timer_recording"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/is_series_recording" />

    <TextView
        android:id="@+id/failed_reason"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/is_timer_recording"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/disabled"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/failed_reason"
        android:text="@string/recording_disabled" />

    <TextView
        android:id="@+id/duplicate"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disabled"
        android:text="@string/duplicate_recording" />

    <TextView
        android:id="@+id/data_size"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duplicate"
        tools:text="@string/data_size" />

    <TextView
        android:id="@+id/data_errors"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_size"
        tools:text="@string/data_errors" />

    <TextView
        android:id="@+id/stream_errors"
        style="@style/ContentFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_errors"
        tools:text="@string/stream_errors" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintTop_toBottomOf="@id/stream_errors" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_content_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="68dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_content_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="12dp" />

</org.tvheadend.tvhclient.ui.common.ListItemContainerView>